Add example for usage of blablador API

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,9 @@ API_MODEL=gpt-5-nano-2025-08-07 # example
 # ollama
 # API_PROVIDER=ollama
 # API_MODEL=deepseek-r1:7b # example
+
+# Blablador
+API_PROVIDER=blablador
+API_ENDPOINT=https://api.helmholtz-blablador.fz-juelich.de/v1/
+API_MODEL=alias-code
+API_KEY=<your-api-key>
