Add example for usage of blablador API

--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,10 @@ API_MODEL=gpt-5-nano-2025-08-07 # example
 
 # ollama
 # API_PROVIDER=ollama
-# API_MODEL=deepseek-r1:7b # example
+# API_MODEL=deepseek-r1:7b # exampleAPI_KEY=glpat-ZXJfneoCQ0l8rUoTY5MR9W86MQp1OmUyagk.01.0z1mwof85
+
+## Blablador
+#API_PROVIDER=blablador
+BBD_API_ENDPOINT=https://api.helmholtz-blablador.fz-juelich.de/v1/
+BBD_API_MODEL=alias-code
+BBD_API_KEY=<your-api-key>
